test/netlist/error/block-arity.bop
A(a, b) = c
where
  c = and(a, b);
end where;

Main(a) = b
where
  b = A(a);
end where;
